Fix vertical alignment of laptop

--- a/wiki/src/index.css
+++ b/wiki/src/index.css
@@ -10,7 +10,7 @@ h3 {
   font-size: 20px;
 }
 
-.hero, .benefits-1 section, .benefits-2 section, .cfas, .news, .users, .recommended, .partners {
+.benefits-1 section, .benefits-2 section, .cfas, .news, .users, .recommended, .partners {
   margin-top: 3em;
 }
 
